--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -157,7 +157,7 @@ end;
 
 保存后，终端输入 
 
-```
+```sh
 $ glpsol -m example -o example.out
 GLPSOL--GLPK LP/MIP Solver 5.0
 Parameter(s) specified in the command line:
@@ -441,4 +441,4 @@ epsilon_lp = 0, nonnegative_lp = true;
 ![](../.gitbook/assets/wxmaxima.png)
 
 
-按，红框位置可执行指令，软件给出的解答为：`[436.608,[x5=480.0,x4=0,x3=720.0,x2=0,x1=0]]`，可知与 GLPK 求得的答案相同。问题解决。
+按红框位置可执行指令，软件给出的解答为：`[436.608,[x5=480.0,x4=0,x3=720.0,x2=0,x1=0]]`，可知与 GLPK 求得的答案相同。问题解决。
