--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -1,10 +1,25 @@
 # 第 20.5 节 科研与专业工具
 
->**注意**
->
->本节内容参考了维基百科，需要重写。
+## Calibre 文档管理（epub、mobi、azw3 等格式）
 
-## 语言与翻译
+### 安装 Calibre
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install calibre
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/deskutils/calibre/ 
+# make install clean
+```
+
+### 使用 Calibre
+
+![](../.gitbook/assets/calibre.png)
 
 ## 代数学
 
