--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -2,6 +2,8 @@
 
 ## Calibre 文档管理（epub、mobi、azw3 等格式）
 
+用过 Kindle 的人应该对 Calibre 这款软件并不陌生。Calibre 可以在多种文档格式之间进行转换，还可以自定义 CSS 格式。
+
 ### 安装 Calibre
 
 - 使用 pkg 安装：
