Calibre 文档管理（epub、mobi、azw3 等格式） (#245)
* Create calibre.png

* Update di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md

* Update di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md

* Update di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md

--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.5-jie-ke-yan-yu-zhuan-ye-gong-ju.md
@@ -1,10 +1,27 @@
 # 第 20.5 节 科研与专业工具
 
->**注意**
->
->本节内容参考了维基百科，需要重写。
+## Calibre 文档管理（epub、mobi、azw3 等格式）
 
-## 语言与翻译
+用过 Kindle 的人应该对 Calibre 这款软件并不陌生。Calibre 可以在多种文档格式之间进行转换，还可以自定义 CSS 格式。
+
+### 安装 Calibre
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install calibre
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/deskutils/calibre/ 
+# make install clean
+```
+
+### 使用 Calibre
+
+![](../.gitbook/assets/calibre.png)
 
 ## 代数学
 
@@ -30,7 +47,7 @@ quit # 退出程序
 ### 后缀表示法
 
 
-从幼儿园接触数学开始，我们用的计算表达方式就是中缀表示法。如，要计算 3 和 4 的和，写作 `3 + 4`，操作符（本例是加号）处于操作数（即 3 和 4）的中间。
+我们从接触数学伊始，用的计算表达方式就是中缀表示法。如，要计算 3 和 4 的和，写作 `3 + 4`，操作符（本例是 `+`）处于操作数（即 3 和 4）的中间。
 
 而在后缀表示法里，操作符置于操作数的后面。如上式改若用后缀表示法，则写作 `3 4 +`。如果有多个操作符，操作符则置于第二个操作数的后面，所以常规中缀表示法的 `3 - 4 + 5` 在后缀表示法里写作 `3 4 - 5 +` 。
 
@@ -269,7 +286,6 @@ End of output
 # pkg install stellarium
 ```
 
-
 或者使用 Ports 安装：
 
 ```sh
@@ -404,10 +420,6 @@ End of output
 # make install clean
 ```
 
-
-## 统计学
-
-## 分析学
 
 ## 统筹学
 
