--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-pin-bo-fang-qi.md
@@ -2,20 +2,38 @@
 
 ## Audacious
 
-
+### 安装 Audacious
 - 使用 pkg 安装：
 
 ```sh
-# pkg install audacious
+# pkg install audacious audacious-plugins
 ```
+
+>**注意**
+>
+>不安装 `audacious-plugins`，则无法打开 `audacious` 主程序。
 
 - 或者使用 Ports 安装：
 
 ```sh
-# cd /usr/ports/multimedia/audacious/ 
-# make install clean
+# cd /usr/ports/multimedia/audacious/ && make install clean
+# cd /usr/ports/multimedia/audacious-plugins/ && make install clean
 ```
+### 使用
 
+- 测试 `.m4a`（杜比 AC-4 编码）、`.flac`、`.av3a`（AVS2/AVS3 编码 ）音乐：
+
+Audacious 仅支持 `.flac`，不支持 `.m4a`、`.av3a`。
+
+![](../.gitbook/assets/audacious.png)
+
+## VLC
+
+安装等方法见其他章节。FreeBSD `ffmpeg` 默认编码没有打开对 libuavs3d（提供了 AVS2/AVS3）的支持。不知道怎样做。
+
+经过测试 VLC 可播放 ac4（m4a）：
+
+![](../.gitbook/assets/vlc3.png)
 
 ## 用 MPD 播放 DSD
 
