--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -36,9 +36,8 @@
 
 虽然 `Renpy` 暂时未对 `FreeBSD` 作系统适配，但是 `FreeBSD` 自己对其作了二次打包。如此一来，就可以在 FreeBSD 上畅玩互动游戏了么？显然不是！不过，我们可以作一番小小的尝试。
 
-### 操作
 
-- 安装 renpy
+### 安装 renpy
 
 使用 pkg：
 
@@ -53,26 +52,48 @@
 # make install clean
 ```
 
-- 下载游戏
+### renpy 设置中文界面
 
-    这里以 [《心跳文学部！》](https://teamsalvato.itch.io/ddlc) 为例，其它游戏也可同样操作。选择附有 Linux 版本的游戏解压。
+![](../.gitbook/assets/renpy1.png)
+
+![](../.gitbook/assets/renpy2.png)
+
+### 玩《心跳文学部！
 
 >**警告**
 >
->《心跳文学部！》是一款恐怖游戏，并可能会致郁！由于编者对此处并不熟悉，请求社区用其他游戏进行替换，可 PR。
+>《心跳文学部！》是一款恐怖游戏，并可能会致郁！
+
+
+    这里以 [《心跳文学部！》](https://teamsalvato.itch.io/ddlc) 为例，其它游戏也可同样操作。选择附有 Linux 版本的游戏解压（即 Windows 版本，2 版本共存）。
 
 - 运行 renpy
 
-    在引擎界面左侧 `工程(Projects)` 处可以看到列出来刷新的游戏 `DDLC-1.1.1`，点击该游戏后，选择右下角的 `启动工程(Launch Project)` 即可加载游戏。
+    默认游戏路径在 `~/`，renpy 不识别中文路径，所以必须把解压后的文件夹 `DDLC-1.1.1-pc` 放在用户根目录下（比如我是 `/home/ykla`）。汉化语言包位置：[Doki Doki Literature Club 简体中文汉化补丁 v1.02（2025更新）](https://steamcommunity.com/sharedfiles/filedetails/?id=1176221672)。将汉化包解压出来放在对应目录即可。
 
-### 参考说明
+    在引擎界面左侧，点击`刷新`。`工程(Projects)` 处可以看到列出来刷新的游戏 `DDLC-1.1.1`，点击该游戏后，选择右下角的 `启动工程(Launch Project)` 即可加载游戏。
 
-- 游戏分发站： [itch](https://itch.io/)
+我已经把上面的游戏打包了放在，以飨读者
+
+![](../.gitbook/assets/renpy3.png)
+
+![](../.gitbook/assets/renpy4.png)
+
+![](../.gitbook/assets/renpy5.png)
+
+![](../.gitbook/assets/renpy6.png)
+
+![](../.gitbook/assets/renpy7.png)
+
+### rpa 解包
+
 - 尽量选择附有 Linux 版本的游戏
 
   如果游戏仅支持 Windows 系统，可通过 renpy 引擎打包 Linux 版本。
 
 - rpa 文件解包：[unrpa](https://github.com/Lattyware/unrpa)
+
+或者 `$ pip install unrpa`
 
 ```python
 $ python3 unrpa -mp "解包目录" "XXX.rpa"
@@ -85,6 +106,10 @@ $ python3 unrpyc -c "XXX.rpyc"
 ```
 
   这一步非必要，仅为了方便翻译成其它语言。
+
+### 参考文献
+
+- 游戏分发站： [itch](https://itch.io/)
 
 ## Godot 游戏
 
@@ -111,8 +136,9 @@ $ godot-tool --rendering-driver opengl3
 
 除此之外，还需要注意的是工程的创建，如果你遇到了上面的卡顿问题，并且使用了强制 OpenGL 参数，在创建项目的时候应该选择“兼容”，而不是 Forward+ 或移动，因为只有“兼容”才使用 OpenGL3 后端，那两个都是 RenderingDevice，这个可以在窗口中的介绍看到。
 
-![图片](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/335335ca-3994-48ec-99f5-be20c5668f8d)
-  
-![CPU 占用情况](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/63f445e5-070d-4b38-82ee-b022c552bb9d)  
 
-![参阅 Godot 官方文档](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/83bbd5e7-3007-45a1-a01c-956c6b5defeb)
+![](../.gitbook/assets/godot1.png)
+  
+![CPU 占用情况](../.gitbook/assets/godot2.png)  
+
+![参阅 Godot 官方文档](../.gitbook/assets/godot3.png)
