--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -73,7 +73,11 @@
 
     在引擎界面左侧，点击`刷新`。`工程(Projects)` 处可以看到列出来刷新的游戏 `DDLC-1.1.1`，点击该游戏后，选择右下角的 `启动工程(Launch Project)` 即可加载游戏。
 
-我已经把上面的游戏打包了放在，以飨读者
+我已经把上面的游戏打包了放在 <https://github.com/ykla/DDLC/releases>，以飨读者。
+
+>**警告**
+>
+>《心跳文学部！》是一款恐怖游戏，并可能会致郁！
 
 ![](../.gitbook/assets/renpy3.png)
 
