--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -62,7 +62,7 @@
 
 >**警告**
 >
->《心跳文学部！》是一款恐怖游戏，并可能会致郁！
+>《心跳文学部！》是一款恐怖游戏，并可能会[致郁](https://ddlc.moe/warning)！
 
 　　这里以 [《心跳文学部！》](https://teamsalvato.itch.io/ddlc) 为例，其它游戏也可同样操作。选择附有 Linux 版本的游戏解压（即 Windows 版本，2 版本共存）。
 
@@ -76,7 +76,7 @@
 
 >**警告**
 >
->《心跳文学部！》是一款恐怖游戏，并可能会致郁！
+>《心跳文学部！》是一款[恐怖游戏](https://ddlc.moe/warning)，并可能会致郁！
 
 ![](../.gitbook/assets/renpy3.png)
 
