格式化第一部分

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
@@ -2,41 +2,62 @@
 
 ## 概述
 
-### 网络设定
+本文会把所有 jail 绑定到虚拟接口 `lo1` 上，所有的 jail 等同于位于 FreeBSD 下的一个局域网中，FreeBSD 主机相当于该局域网的网关。
 
-文中会把所有 jail 绑定到虚拟接口 lo1 上，所有的 jail 相当于处于 FreeBSD 下的一个局域网，FreeBSD 主机相当于这个局域网的网关。所有 jail 的网络活动须经过 lo1 网络接口，所以要使用网络就要做网络转发，这里使用 pf 完成这个工作。 **这是网络访问的关键** 。
+所有 jail 的网络活动须经过网络接口 `lo1`，所以要使用网络就须做网络转发，这里使用 pf 防火墙完成这个工作。 
 
-#### 准备网络接口
+>**注意**
+>
+>这是获取网络访问的关键。
+
+### 准备网络接口
 
 ```sh
 # sysrc cloned_interfaces+="lo1" # 增加一个克隆的网络接口 lo1
 # service netif cloneup          # 启用克隆的网络接口
 ```
 
-编辑 `/etc/pf.conf`
+### 准备 pf 防火墙
 
-pf 防火墙的配置这里提供两种方式，请根据需要选取。
+这里提供两种方式进行配置，请按需选用。
 
-**方法一：**
+
+
+#### 方法一
+
+编辑 `/etc/pf.conf`，加入：
 
 ```sh
 table <jails> persist
 nat pass on em0 inet from <jails> to any -> em0
 ```
 
-在防火墙中建立名为 jails 的表，并指定 persist 标志使防火墙总是保持这个表（即使没有相关的规则引用它）。表是 pf 防火墙的一种命名结构，可以保存地址和网络的集合。jails 表中的地址可以通过 NAT 访问网络。jails 表可以用 `pfctl` 进行增减以达到控制网络访问的目的。如 `pfctl -t jails -T add 192.168.5.1` 把 `192.168.5.1` 加入 jails 表使其可以访问网络，`pfctl -t jails -T delete 192.168.5.1` 把 `192.168.5.1` 移出 jails 表使其不能访问网络。特点是手动管理麻烦，但灵活
+在防火墙中建立名为 `jails` 的表，并指定 `persist` 标志使防火墙总是维持这个表（即使没有相关的规则引用它）。
 
-**方法二：**
+“表”是 pf 防火墙的一种命名结构，可保存地址和网络的集合。`jails` 表中的地址可以通过 NAT 访问网络。
+
+可以用 `pfctl` 对 `jails` 表进行增减以达到控制网络访问的目的。如：
+
+- `pfctl -t jails -T add 192.168.5.1` 把 `192.168.5.1` 加入 jails 表使其可以访问网络
+- `pfctl -t jails -T delete 192.168.5.1` 把 `192.168.5.1` 移出 jails 表使其无法访问网络。
+
+特点是手动管理麻烦，但灵活。
+
+#### 方法二
+
+直接在 `/etc/pf.conf` 中写下规则：
 
 ```sh
 nat pass on em0 inet from 192.168.5.1 to any -> em0
 ```
 
-直接在 `/etc/pf.conf` 中写下规则，允许 192.168.5.1 访问网络，特点是规则固化在配置中，没有特别的需求的话这个挺方便的
+以允许 `192.168.5.1` 访问网络，特点是规则固化在配置中，没有特别的需求的话这个挺方便的。
 
-#### 启用 pf 防火墙
+### 启用 pf 防火墙
 
-**无论你想不想使用防火墙，不这样设置你在 Jail 中都没有网络**
+>**警告**
+>
+>无论你想不想使用防火墙，不这样设置你在 Jail 中都没有网络。
 
 ```sh
 # sysrc pf_enable=YES
@@ -50,7 +71,7 @@ nat pass on em0 inet from 192.168.5.1 to any -> em0
 # service linux start
 ```
 
-这种方式自动完成 linux 兼容层各个模块的加载
+这种方式可自动完成 linux 兼容层各个模块的加载
 
 ### 准备目录
 
