部分格式化

--- a/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
@@ -1,6 +1,6 @@
 # 第 21.12 节 高级教程：Linux 兼容层与 Jail
 
-## 概述
+## 准备工作
 
 本文会把所有 jail 绑定到虚拟接口 `lo1` 上，所有的 jail 等同于位于 FreeBSD 下的一个局域网中，FreeBSD 主机相当于该局域网的网关。
 
@@ -20,8 +20,6 @@
 ### 准备 pf 防火墙
 
 这里提供两种方式进行配置，请按需选用。
-
-
 
 #### 方法一
 
@@ -60,14 +58,14 @@ nat pass on em0 inet from 192.168.5.1 to any -> em0
 >无论你想不想使用防火墙，不这样设置你在 Jail 中都没有网络。
 
 ```sh
-# sysrc pf_enable=YES
+# service pf enable
 # service pf start
 ```
 
-### 加载必要的内核模块
+### 加载必要的 Linux 兼容层内核模块
 
 ```sh
-# sysrc linux_enable=YES
+# service linux enable
 # service linux start
 ```
 
@@ -76,7 +74,7 @@ nat pass on em0 inet from 192.168.5.1 to any -> em0
 ### 准备目录
 
 ```sh
-# mkdir /usr/jails  # 用于保存建立 jails 的相关文件
+# mkdir /usr/jails  # 用于保存建立 jail 的相关文件
 ```
 
 ## 创建 debian jail
@@ -105,24 +103,21 @@ I: Resolving dependencies of base packages...
 I: Checking component main on https://mirrors.ustc.edu.cn/debian...
 I: Retrieving adduser 3.130
 I: Validating adduser 3.130
-I: Retrieving apt 2.5.5
-I: Validating apt 2.5.5
 ...
 I: Extracting usr-is-merged...
-I: Extracting util-linux...
 I: Extracting util-linux-extra...
 I: Extracting zlib1g...
-root@freebsd:/root #
-
 ```
 
-**注意** ：这里可能会提示有错误，无视即可。
+>**注意** 
+>
+>末尾可能会提示有错误，无视即可。
 
 ### 创建 debian jail 实例
 
 现在用 Debian 12 基本系统创建 jail 实例，命名为 debian。
 
-#### 建立实例的基本配置
+#### 实例的基本配置
 
 创建 `/etc/fstab.debian`，内容如下：
 
@@ -135,7 +130,7 @@ linsysfs   /usr/jails/debian/sys      linsysfs    rw                      0  0
 /tmp       /usr/jails/debian/tmp      nullfs      rw                      0  0
 ```
 
-在 `/etc/jail.conf` 中，加入以下内容（没有该文件就自己建一个）：
+在 `/etc/jail.conf` 中，加入以下内容（若无则新建）：
 
 ```sh
 debian {                               # jail 名
@@ -159,36 +154,48 @@ debian {                               # jail 名
 }
 ```
 
-`exec.start` 指定启动 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `exec.start = 'sh /etc/rc'` , 即使用 FreeBSD 的 rc 系统启动服务，但是 debian 中使用的是 systemd 作为 init 系统。jail 并不能使用 systemd，所以不能使用相应的命令（service 命令可用），所以在这里用 `/bin/true` 不做任何事安全的返回 true 就可以。问题就是（以 sshd 服务为例）在 debian jail 中启用 sshd 服务后（ `service ssh start` ）, 如果重启 debian jail 那么 sshd 服务不会再次随 jail 启动而启动，这时可以写成 `exec.start = 'service ssh start'` , 这样启动 debian jail 时可以启动 sshd 服务，如果要启用更多的服务，则可以编写如下：
+- `exec.start` 指定启动 jail 时运行的命令。
+
+如果是 freebsd 做 jail 一般是 `exec.start = 'sh /etc/rc'`，即使用 FreeBSD 的 rc 系统启动服务。
+
+但是 debian 中使用的是 systemd 作为 init 系统。jail 并不能使用 systemd，所以不能使用相应的命令（service 命令可用），所以在这里用 `/bin/true` 不做任何事安全的返回 `true` 就可以。
+
+问题就是（以 sshd 服务为例）在 debian jail 中启用 sshd 服务后（ `service ssh start` ）, 如果重启 debian jail，那么 sshd 服务不会再次随 jail 启动而启动。这时可以写成 `exec.start = 'service ssh start'`。这样启动 debian jail 时可以启动 sshd 服务。
+
+如果要启用更多的服务，则可以编写如下：
 
 ```sh
 exec.start += 'service ssh start'
 exec.start += 'service dbus start'
 ```
 
-`exec.stop` 停止 jail 时运行的命令，如果是 freebsd 做 jail 一般是 `sh /etc/rc.shutdown jail`, 这里同样因为 systemd 的原因用 `/bin/true` 安全的返回 true 就可以
+- `exec.stop` 停止 jail 时运行的命令。
 
-#### 启用实例并允许网络访问
+如果是 freebsd 做 jail 一般是 `sh /etc/rc.shutdown jail`。
 
-启动 jail
+这里同样因为 systemd 的原因用 `/bin/true` 安全的返回 `true` 就可以。
+
+### 启用实例，允许网络访问
+
+- 启动 jail
 
 ```sh
 # jail -c debian
 ```
 
-停止 jail
+- 停止 jail
 
 ```sh
 # jail -r debian
 ```
 
-在 pf 防火墙中的 jails 表中加入 jail 的地址，以允许 jail 访问网络
+- 在 pf 防火墙中的 `jails` 表中加入 jail 的地址，以允许 jail 访问网络：
 
 ```sh
 # pfctl -t jails -T add 192.168.5.1
 ```
 
-#### 更新系统
+### 更新系统
 
 执行：
 
@@ -205,27 +212,31 @@ Debian # apt update # 此时位于 Debian Jail!
 # jexec -l debian /bin/bash -c 'apt update'
 ```
 
-至此，一个基于 Debian 12 的 linux jail 已经成功建立，同样的方法可以建立基于 debian 和 ubuntu 各版本的多个 jail.
+至此，一个基于 Debian 12 的 linux jail 已经成功建立，同样的方法可以建立基于 debian 和 ubuntu 各版本的多个 jail。
 
-### 开机启动 jail
+## jail 开机自启
 
 开机时启动 jail
 
 ```sh
-# sysrc jail_enable=YES
+# service jail enable
 ```
 
-默认启动所有 jail，另外 `/etc/rc.conf` 中 可以用 `jail_list` 变量指定在开机时启动的 jail 的名字
+默认启动所有 jail。
 
-编辑 `/etc/rc.conf` 写入：
+另外可以在 `/etc/rc.conf` 中用 `jail_list` 变量指定在开机时启动的 jail 的名字，编辑 `/etc/rc.conf` 写入：
 
 ```sh
 jail_list = "debian"
 ```
 
-或执行 `sysrc jail_list+=debian`
+或执行 
 
-如果 `jail_list` 变量为空，则启动所有在 `/etc/jail.conf` 中配置的 jail
+```sh
+# sysrc jail_list+=debian
+```
+
+如果 `jail_list` 变量为空，则会启动所有在 `/etc/jail.conf` 中配置的 jail。
 
 ## 创建 Ubuntu jail
 
@@ -276,15 +287,19 @@ ubuntu {
 # jail -c ubuntu # 启用实例
 ```
 
-如果已经在 `/etc/rc.conf` 中设置 `jail_enable=YES`，也可以用
+如果已经在 `/etc/rc.conf` 中设置过 `jail_enable=YES`，也可以用
 
 ```sh
 # service jail start ubuntu
 ```
 
-开机启动可以参考 debian jail，执行 `sysrc jail_list+=ubuntu`
+开机启动可以参考 debian jail，执行 
 
-在 pf 防火墙中的 jails 表中加入 jail 的地址，以允许 jail 访问网络
+```sh
+# sysrc jail_list+=ubuntu
+```
+
+在 pf 防火墙中的 `jails` 表中加入 jail 的地址，以允许 jail 访问网络：
 
 ```sh
 # pfctl -t jails -T add 192.168.5.2 # 允许网络访问
@@ -305,11 +320,11 @@ Ubuntu # apt update # 此时位于 Ubuntu Jail!
 # jexec -l debian /bin/bash -c 'apt update'
 ```
 
-过程和 debian jail 一样。
+过程和同 debian jail。
 
 ## 创建 AntiX linux jail
 
-AntiX 基于 debian，并且不使用 systemd。
+AntiX 基于 debian，且不使用 systemd。
 
 ### 下载镜像文件并解压
 
@@ -365,24 +380,28 @@ antix {
 }
 ```
 
-**注意**：这里 `exec.start` 设为 `/etc/init.d/rc 3`。在 debian jail 部分已经提到，debian 使用 systemd 做初始化系统，这在 jail 中不能使用，所以用 `/bin/true` 启动，以保证什么都不做，只是安全返回 true 值。antiX 不使用 systemd 做初始化系统，可以用 rc 进行初始化。在这里 `/etc/init.d/rc 3` 指定 antix jail 在启动时使用 rc 以第 3 运行级别初始化 jail。也就是在 debian jail 中提到的服务运行问题在这里并不存在（即可以直接在 jail 启动时运行服务，比如 sshd）。
+这里 `exec.start` 设为 `/etc/init.d/rc 3`。
+
+在 debian jail 部分已经提到，debian 使用 systemd 做初始化系统。这在 jail 中不能使用，所以用 `/bin/true` 启动，以保证什么都不做，只是安全返回 true 值。
+
+antiX 不使用 systemd 做初始化系统，可以用 rc 进行初始化：在这里 `/etc/init.d/rc 3` 指定 antix jail 在启动时使用 rc 以第 3 运行级别初始化 jail。即在 debian jail 中提到的服务运行问题在这里并不存在（即可以直接在 jail 启动时运行服务，比如 sshd）。
 
 ### 更新系统
 
-设置开机启动，并启动
+- 设置开机自启，然后启动
 
 ```sh
 # sysrc jail_list+=antix
 # jail -c antix   # 或者使用 service jail start antix 前面已经提到
 ```
 
-在 pf 中允许网络访问，方法同上。
+- 在 pf 中允许网络访问，方法同上。
 
 ```sh
 # pfctl -t jails -T add 192.168.5.3
 ```
 
-现在进入 jail：
+- 现在进入 jail：
 
 ```sh
 # jexec antix /bin/bash     # 宿主机（FreeBSD）中
@@ -395,6 +414,8 @@ root@antix:/# mandb       # apt upgrade 的时候显示 mandb 有几个权限错
 
 ## 创建 Alpine jail
 
+- 构建基本系统
+
 ```sh
 # fetch http://mirrors.ustc.edu.cn/alpine/v3.17/releases/x86_64/alpine-minirootfs-3.17.1-x86_64.tar.gz
 # mkdir -p /usr/jails/alpine
@@ -403,7 +424,7 @@ root@antix:/# mandb       # apt upgrade 的时候显示 mandb 有几个权限错
 # touch /usr/jails/alpine/dev/fd
 ```
 
-创建 `/etc/fstab.alpine`，内容如下：
+- 创建 `/etc/fstab.alpine`，内容如下：
 
 ```sh
 devfs      /usr/jails/alpine/dev      devfs       rw                      0  0
@@ -414,7 +435,7 @@ linsysfs   /usr/jails/alpine/sys      linsysfs    rw                      0  0
 #/tmp       /usr/jails/alpine/tmp      nullfs      rw                      0  0
 ```
 
-在 `/etc/jail.conf` 中写入，
+- 在 `/etc/jail.conf` 中写入，
 
 ```sh
 alpine {
@@ -435,23 +456,23 @@ alpine {
 }
 ```
 
-设置开机启动，并启动
+- 设置开机启动，然后启动
 
 ```sh
 # sysrc jail_list+=alpine
 # jail -c alpine
 ```
 
-在 pf 中允许网络访问，方法同上。
+- 在 pf 中允许网络访问，方法同上。
 
 ```sh
 # pfctl -t jails -T add 192.168.5.4
 ```
 
-现在进入 jail：
+- 现在进入 jail：
 
 ```sh
-freebsd # jexec alpine /bin/sh        # 初始只有 sh，注意 shell 提示符变化
+freebsd # jexec alpine /bin/sh        # 初始只有 sh，注意 shell 提示符的变化
 alpine # sed  -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/' /etc/apk/repositories    # 修改镜像地址
 alpine # echo 'nameserver 223.5.5.5' >> /etc/resolv.conf      #  初始没有这个文件，自建一个
 alpine # apk update             # alpine 可以不使用 openrc 而使用程序，但是不能启动各种服务，只有在安装 openrc 后才能启动各项服务，所以最好安装 openrc 以获得更好的体验
@@ -462,7 +483,7 @@ alpine # exit    #注意 shell 提示符变化
 freebsd # jail -r alpine    # 先关闭 alpine，以使在 freebsd 宿主机中进行 openrc 配置
 ```
 
-修改 `/etc/jail.conf` 中 alpine 的配置：
+- 修改 `/etc/jail.conf` 中 alpine 的配置：
 
 ```sh
 alpine {
@@ -483,7 +504,7 @@ alpine {
 }
 ```
 
-重新启动 alpine
+- 重启 alpine
 
 ```sh
 # jail -c alpine
@@ -491,9 +512,11 @@ alpine {
 
 ## jail 中的 GUI
 
-教程环境：Windows 10 物理机，在 virtualbox 安装了 FreeBSD 13.1 虚拟机。
+本文环境：Windows 10 物理机，在 virtualbox 安装了 FreeBSD 13.1 虚拟机。
 
-FreeBSD 虚拟机中已部署 4 个 jail，如下，这里有一个 freebsd jail，为和 virtualbox 中的 FreeBSD 虚拟机作区分，将称其为 freebsd-jail
+在 FreeBSD 虚拟机中已部署了 4 个 jail，如下。这里有一个 freebsd jail，为和 virtualbox 中的 FreeBSD 虚拟机作区分，我们称其为 `freebsd-jail`：
+
+Windows 10 物理机-->FreeBSD 13.1 虚拟机-->FreeBSD Jail（`freebsd-jail`） + Debian Jail + Ubuntu Jail + Alpine Jail。
 
 ```sh
 root@freebsd:~ # jls
@@ -502,8 +525,6 @@ root@freebsd:~ # jls
      2  192.168.5.4     ubuntu                    /usr/jails/ubuntu
      3  192.168.5.2     alpine                        /usr/jails/alpine
      4  192.168.5.1     freebsd-jail                  /usr/jails/freebsd-jail
-root@freebsd:~ #
-
 ```
 
 4 个 jail 各自安装 xclock、firefox、chrome、jwm 这些软件在 freebsd-jail、debian、ubuntu、alpine( alpine 使用 vnc 方法不成功，其它方法 xclock、xterm 可运行，firefox 和 chrome 未成功) 都有成功，jwm 用于美化。注意不用安装 xorg。
