--- a/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.12-jie-gao-ji-jiao-cheng-linux-jian-rong-ceng-yu-jail.md
@@ -516,10 +516,10 @@ alpine {
 
 在 FreeBSD 虚拟机中已部署了 4 个 jail，如下。这里有一个 freebsd jail，为和 virtualbox 中的 FreeBSD 虚拟机作区分，我们称其为 `freebsd-jail`：
 
-Windows 10 物理机-->FreeBSD 13.1 虚拟机-->FreeBSD Jail（`freebsd-jail`） + Debian Jail + Ubuntu Jail + Alpine Jail。
+Windows 10 物理机 ⇨ FreeBSD 13.1 虚拟机 ⇨ FreeBSD Jail（`freebsd-jail`） + Debian Jail + Ubuntu Jail + Alpine Jail。
 
 ```sh
-root@freebsd:~ # jls
+# jls
    JID  IP Address      Hostname                      Path
      1  192.168.5.3     debian                      /usr/jails/debian
      2  192.168.5.4     ubuntu                    /usr/jails/ubuntu
