--- a/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
+++ b/di-27-zhang-netbsd/di-27.1-jie-gai-shu.md
@@ -11,4 +11,9 @@ NetBSD 有 Linux 兼容层。
 如果您想捐赠 NetBSD：
 
 - 最简单的方式是使用 Github Sponsors：<https://github.com/sponsors/netbsd> ~~还能刷个 Github 徽章 [Public Sponsor](https://github.com/orgs/community/discussions/19916) 出来~~
+
+>**技巧**
+>
+>支付后支付方式会被绑定，要删除的话可以找 GitHub 客服[提交工单](https://support.github.com/)。一般一个工作日内就会解决。
+
 - [Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联、Google Pay 等多种支付方式。
