--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -2,50 +2,48 @@
 
 >**警告**
 >
->**本章节来自网络，可能存在版权问题；且未经验证，并不可靠。** 本文出处是 <https://tieba.baidu.com/p/8351273539>
+>**本章节来自网络，可能存在版权问题；且未经验证，并不可靠。**
 
 
 IPFIREWALL (IPFW) 是一款由 FreeBSD 发起的防火墙应用软件，它由 FreeBSD 项目编写和维护。
 
-ipfw 已经默认被编译进内核了，它默认会有一条规则，规则号为 `65536`，是不可以删除的：这条规则会把所有流量都切断。故在还未配置好之前，千万不要随意启动 ipfw，否则就会面临无法远程连接 FreeBSD 的问题。
+ipfw 在基本系统的内核（GENERIC）作为可加载模块而存在。它默认会有一条规则，规则号为 `65535`，是不可以删除的：这条规则会把所有流量都切断。故在还未配置好之前，千万不要随意启动 ipfw，否则就会面临无法远程连接 FreeBSD 的问题。
 
 ## 配置 ipfw
 
 执行以下命令：
 
 ```sh
-# sysrc firewall_enable="YES"  # 允许防火墙开机自启
-# sysrc firewall_type="open"  # 让系统把流量通过，这样就可以使用防火墙
-# sysrc firewall_script="/etc/ipfw.rules"  # 制定 ipfw 规则的路径，我们待会儿在这里编辑规则
-# sysrc firewall_logging="YES"  # 这样 ipfw 就可以打日志
-# sysrc firewall_logif="YES"  # 把日志打到 `ipfw0` 这个设备里
+# sysrc firewall_enable="YES"  # 开机自动启动防火墙相应的内核模块。参见 https://github.com/freebsd/freebsd-src/blob/main/libexec/rc/rc.d/routing#L387
+# sysrc firewall_type="open"  # 允许任何访问。如果不这么做，会调用默认规则 65535——deny ip from any to any，拒绝所有 IP。你就只能去物理机上再操作了
+# sysrc firewall_script="/etc/ipfw.rules"  # 制定 ipfw 规则的路径，在此处编辑规则
+# sysrc firewall_logging="YES"  # 这样 ipfw 就可以打印日志
+# sysrc firewall_logif="YES"  # 把日志打印到 `ipfw0` 这个设备里
 ```
 
 编辑 `/etc/ipfw.rules` 文件：
 
 ```sh
-# ee /etc/ipfw.rules
-
-IPF="ipfw -q add"
-ipfw -q -f flush
+IPF="ipfw -q add" # ​定义一个变量 IPF，用于简化后续添加规则的命令。
+ipfw -q -f flush # -q 选项表示静默模式，避免输出冗余信息。
 
 # loopback
-$IPF 10 allow all from any to any via lo0
-$IPF 20 deny all from any to 127.0.0.0/8
-$IPF 30 deny all from 127.0.0.0/8 to any
-$IPF 40 deny tcp from any to any frag
+$IPF 10 allow all from any to any via lo0 # 允许所有通过回环接口 lo0 的流量。
+$IPF 20 deny all from any to 127.0.0.0/8 # 拒绝任何试图访问本地回环地址范围（127.0.0.0/8）的外部流量，防止伪造的回环地址通信。
+$IPF 30 deny all from 127.0.0.0/8 to any # 拒绝来自回环地址范围的任何流量离开本地主机，进一步确保回环地址的安全性。
+$IPF 40 deny tcp from any to any frag # ​拒绝所有分片的 TCP 数据包，有助于防范某些类型的攻击。
 
 # statefull
-$IPF 50 check-state
-$IPF 60 allow tcp from any to any established
-$IPF 70 allow all from any to any out keep-state
-$IPF 80 allow icmp from any to any
+$IPF 50 check-state # 检查现有的会话状态，允许已建立的会话继续通信。
+$IPF 60 allow tcp from any to any established # 允许所有已建立的 TCP 连接的数据包通过。
+$IPF 70 allow all from any to any out keep-state # 允许所有向外的流量，并对其创建状态记录，以便响应流量能够自动通过。
+$IPF 80 allow icmp from any to any # 允许所有 ICMP 数据包，支持网络诊断和错误报告功能。​
 
 # open port for ssh
-$IPF 110 allow tcp from any to any 22 out
-$IPF 120 allow tcp from any to any 22 in
+$IPF 110 allow tcp from any to any 22 out # 允许所有向外的 SSH 流量
+$IPF 120 allow tcp from any to any 22 in # 确保可以通过 SSH 访问该主机。
 
-# open port for samba
+# open port for samba # 允许与 Samba 文件共享服务相关的端口（137-139 和 445）的进出流量，确保 Samba 服务正常运行。
 $IPF 130 allow tcp from any to any 139 out
 $IPF 140 allow tcp from any to any 139 in
 $IPF 150 allow tcp from any to any 445 out
@@ -56,11 +54,10 @@ $IPF 190 allow udp from any to any 138 out
 $IPF 200 allow udp from any to any 138 in
 
 
-# deny and log everything
+# deny and log everything # 拒绝所有未明确允许的流量，并将其记录到日志中，便于审计和故障排查。
 $IPF 500 deny log all from any to any
 ```
 
-额外说明：samba 开放 tcp/139,445 端口，udp/137,138 端口
 
 启动 ipfw：
 
