--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -104,7 +104,7 @@ $cmd 200 allow udp from any to any 138 in
 $cmd 500 deny log all from any to any
 ```
 
-我们可以把默认拒绝的规则 `65535 deny ip from any to any` 改成默认允许
+- 我们可以把默认拒绝的规则 `65535 deny ip from any to any` 改成默认允许
 
 ```sh
 # echo net.inet.ip.fw.default_to_accept="1" >> /boot/loader.conf
