--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -2,7 +2,7 @@
 
 IPFIREWALL (IPFW，IP 防火墙) 是一款由 FreeBSD 发起的防火墙应用软件，它由 FreeBSD 项目编写和维护。
 
-ipfw 在基本系统的内核（GENERIC）作为可加载模块而存在。它默认会有一条规则，规则号为 `65535`，是不可以删除的：这条规则会把所有流量都切断。故在还未配置好之前，千万不要随意启动 ipfw，否则就会面临无法远程连接 FreeBSD 的问题。
+ipfw 在基本系统的内核（GENERIC）作为可加载模块而存在。它默认会有一条规则，规则号为 `65535`，是不可以删除的：这条规则会把所有流量都切断。故在未配置好防火墙钱，请勿启动 ipfw，否则就会面临被阻挡在防火墙之外的麻烦。
 
 ## 服务项
 
