--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.3-jie-ipfw.md
@@ -42,7 +42,7 @@ ipfw is enabled
 
 ```
 # sysrc firewall_type="open"  # 允许任何访问。如果不这么做，会调用默认规则 65535——deny ip from any to any，拒绝所有 IP。你就只能去物理机上再操作了。基本等同于 net.inet.ip.fw.default_to_accept="1"
-# sysrc firewall_script="/etc/ipfw.rules"  # 指定 ipfw 规则的路径，在此处编辑规则
+# sysrc firewall_script="/usr/local/etc/ipfw.rules"  # 指定 ipfw 规则的路径，在此处编辑规则
 # sysrc firewall_logging="YES"  # 这样 ipfw 就可以打印日志
 # sysrc firewall_logif="YES"  # 把日志打印到 `ipfw0` 这个设备里
 ```
@@ -65,7 +65,11 @@ ipfw is enabled
 65535 deny ip from any to any
 ```
 
-## 编辑 `/etc/ipfw.rules` 文件：
+## 编辑 `/usr/local/etc/ipfw.rules` 文件：
+
+>**注意**
+>
+>ipfw 命令是一次性的，它会在执行时即时生效，但不会永久保存规则。你须写入指定的规则文件。
 
 指定防火墙规则：
 
