第 15.2 节 Packet Filter（PF）

--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.2-jie-pf.md
@@ -1,4 +1,4 @@
-# 第 15.2 节 PF
+# 第 15.2 节 Packet Filter（PF）
 
 PF（Packet Filter，包过滤器）是一款由 OpenBSD 移植而来的防火墙，提供了大量功能，包括 ALTQ (Alternate Queuing，交错队列) 等。
 
