--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -89,6 +89,10 @@ ifconfig_xxx="inet x.x.x.x netmask x.x.x.x promisc"
 
 ## `/etc/rc.conf` 相关
 
+>**技巧**
+>
+>`ifconfig` 命令多是一次性的，不是永久性配置。你须写入  rc 文件方可持久化。
+
 `/etc/rc.conf`：
 
 ```ini
