--- a/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
+++ b/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
@@ -6,6 +6,13 @@ GhostBSD 官网为 <https://www.ghostbsd.org/>。其口号为“A simple, elegan
 
 GhostBSD 这个名字和以前 Windows 上常用的 Ghost 并无任何关联，实则意为 `(G)nome (host)ed by Free(BSD)`（由 FreeBSD 驱动的 Gnome 桌面），而如今 MATE 桌面亦是 Gnome 的延续。GhostBSD 默认配置了 Linux 兼容层，使用 FreeBSD 的 pkg 和 ports，也有 GhostBSD 自己的二进制软件包的官方图形化软件。
 
-GhostBSD 下载地址在 <https://www.ghostbsd.org/download>。GhostBSD 官方只提供了基于 MATE 桌面的安装镜像，社区提供了 XFCE 桌面。GhostBSD 是一款滚动发行版，但滚动速度较缓慢，基于最新的 `stable` 分支。常见问题文档在 [FAQ](https://ghostbsd-documentation-portal.readthedocs.io/en/latest/user/FAQ.html)。可以看到默认没有编译工具需要通过命令 `sudo pkg install -g 'GhostBSD*-dev'` 安装。
+GhostBSD 下载地址在 <https://www.ghostbsd.org/download>。GhostBSD 官方只提供了基于 MATE 桌面的安装镜像，社区提供了 XFCE 桌面。GhostBSD 是一款滚动发行版，但滚动速度较缓慢，基于最新的 `STABLE` 分支。常见问题文档在 [FAQ](https://ghostbsd-documentation-portal.readthedocs.io/en/latest/user/FAQ.html)。可以看到默认没有编译工具需要通过命令 `sudo pkg install -g 'GhostBSD*-dev'` 安装。
 
 GhostBSD 至少需要 4GB 内存才能安装，因为启动后它会从内存运行。
+
+
+## NomadBSD
+
+NomadBSD 的官网为 <https://nomadbsd.org/>。NomadBSD 基于 FreeBSD 最新 `RELEASE` 版本。2G 内存即可安装，设计用于 LiveCD，测试 FreeBSD 硬件兼容性。
+
+NomadBSD 下载地址为 <https://nomadbsd.org/download.html>（页面右侧 	`MANIFEST` 为预装的软件）。NomadBSD 默认采用 XFCE 桌面、bash shell。
