--- a/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
+++ b/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
@@ -38,3 +38,5 @@ helloSystem 的官网为 <https://hellosystem.github.io/docs/>，同时也是他
 helloSystem 的设计原则是面向 Mac 用户，简而言之即桌面 Mac 化 FreeBSD。设计哲学是“少而精”。
 
 helloSystem 基于 `RELEASE` 版本。
+
+helloSystem 需要 4-8G 内存才能运行。
