--- a/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
+++ b/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
@@ -4,7 +4,7 @@
 
 GhostBSD 始于 2010 年。
 
-GhostBSD 官网为 <https://www.ghostbsd.org/>。其口号为“A simple, elegant desktop BSD Operating System”，即“GhostBSD 是一款简洁又优雅的 BSD 桌面操作系统”。
+GhostBSD 官网为 <https://www.ghostbsd.org>。其口号为“A simple, elegant desktop BSD Operating System”，即“GhostBSD 是一款简洁又优雅的 BSD 桌面操作系统”。
 
 GhostBSD 曾基于 TrueOS（又一款消逝的桌面发行版），也曾使用 Gnome 作为桌面。GhostBSD 这个名字和以前 Windows 上常用的 Ghost 并无任何关联，实则意为 `(G)nome (host)ed by Free(BSD)`（由 FreeBSD 驱动的 Gnome 桌面），而如今 MATE 桌面亦是 Gnome 的延续。GhostBSD 默认配置了 Linux 兼容层，使用 FreeBSD 的 pkg 和 ports，也有 GhostBSD 自己的二进制软件包的官方图形化软件。
 
@@ -17,13 +17,13 @@ GhostBSD 至少需要 4GB 内存才能安装，因为启动后它会从内存运
 
 NomadBSD 始于 2018 年。Nomad 即“游牧人，经常迁移的人”，对应了其面向 U 盘，即插即用的设计。
 
-NomadBSD 的官网为 <https://nomadbsd.org/>。NomadBSD 基于 FreeBSD 最新 `RELEASE` 版本。2G 内存即可安装，设计用于 LiveCD，测试 FreeBSD 硬件兼容性。
+NomadBSD 的官网为 <https://nomadbsd.org>。NomadBSD 基于 FreeBSD 最新 `RELEASE` 版本。2G 内存即可安装，设计用于 LiveCD，测试 FreeBSD 硬件兼容性。
 
 NomadBSD 下载地址为 <https://nomadbsd.org/download.html>（页面右侧 	`MANIFEST` 为预装的软件）。NomadBSD 默认采用 XFCE 桌面、bash shell。
 
 ## MidnightBSD
 
-MidnightBSD 的官网为 <https://www.midnightbsd.org/>。MidnightBSD 也是一款基于 XFCE 的发行版。因为起个名字真是太难了，而创始人的第一只黑猫叫 Midnight（午夜），所以就叫 MidnightBSD 啦。
+MidnightBSD 的官网为 <https://www.midnightbsd.org>。MidnightBSD 也是一款基于 XFCE 的发行版。因为起个名字真是太难了，而创始人的第一只猫叫 Midnight（即午夜，可能因为是只黑猫），所以就叫 MidnightBSD 啦。
 
 MidnightBSD 始于 2006 年。有自己的 Ports 叫 [mports](https://www.midnightbsd.org/documentation/mports/index.html)。
 
@@ -31,9 +31,9 @@ MidnightBSD 始于 2006 年。有自己的 Ports 叫 [mports](https://www.midnig
 
 helloSystem 始于 2021 年。
 
-helloSystem 似乎已经停滞了有一段时间了。他们甚至连 `helloSystem.org` 这个域名都没有注册过。
+helloSystem 似乎已经停滞了有一段时间了。该团队甚至连 `helloSystem.org` 这个域名都没有注册过。各种设计以及交互逻辑都同传统的发行版不一致，例如在终端中，快捷键 **ctrl**+**c** 是“复制”而不是“中断程序”……
 
-helloSystem 的官网为 <https://hellosystem.github.io/docs/>，同时也是他们的文档网站。下载地址在 [Github 上面](https://github.com/helloSystem/ISO/releases)。
+helloSystem 的官网为 <https://hellosystem.github.io/docs>，同时也是他们的文档网站。下载地址在 [Github 上面](https://github.com/helloSystem/ISO/releases)。
 
 helloSystem 的设计原则是面向 Mac 用户，简而言之即桌面 Mac 化 FreeBSD。设计哲学是“少而精”。
 
