--- a/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
+++ b/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
@@ -35,7 +35,7 @@ helloSystem 似乎已经停滞了有一段时间了。该团队甚至连 `helloS
 
 helloSystem 的官网为 <https://hellosystem.github.io/docs>，同时也是他们的文档网站。下载地址在 [Github 上面](https://github.com/helloSystem/ISO/releases)。
 
-helloSystem 的设计原则是面向 Mac 用户，简而言之即桌面 Mac 化 FreeBSD。设计哲学是“少而精”。
+helloSystem 的设计原则是面向 Mac 用户，简而言之即桌面 Mac 化的 FreeBSD。设计哲学是“少而精”。
 
 helloSystem 基于 `RELEASE` 版本。
 
