--- a/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
+++ b/di-4-zhang-zhuo-mian-an-zhuang/4.21-others-bsd.md
@@ -29,7 +29,7 @@ MidnightBSD 始于 2006 年。有自己的 Ports 叫 [mports](https://www.midnig
 
 ## helloSystem
 
-helloSystem 始于 2021 年。
+helloSystem 始于 2021 年。helloSystem 是 BSD 界的 [Pear OS](https://pearos.xyz)。
 
 helloSystem 似乎已经停滞了有一段时间了。该团队甚至连 `helloSystem.org` 这个域名都没有注册过。各种设计以及交互逻辑都同传统的发行版不一致，例如在终端中，快捷键 **ctrl**+**c** 是“复制”而不是“中断程序”……
 
